[package]
name = "orca_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
num-complex = "0.4.4"
num-traits = "0.2.17"
hdf5 = "0.7"
rand = "0.8.5"
rand_distr = "0.4.3"
log = "0.4"
log4rs = "1.0"
